--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 fastapi==0.100.0
 uvicorn==0.23.0
-pydantic==1.10.8
+pydantic==2.10.6
+pydantic-settings==2.2.1
 pytest==7.3.1
 requests==2.31.0
+SQLAlchemy==2.0.17
+psycopg2-binary==2.9.7
