Add alembic to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ googleapis-common-protos>=1.56.0  # Added for google.api
 openai>=1.0.0
 langchain==0.3.19
 python-dotenv==1.0.0
+alembic==1.11.1
 
 # Hugging Face & LoRA
 transformers==4.31.0
