--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,6 @@ alembic==1.11.1
 # Hugging Face & LoRA
 transformers==4.31.0
 accelerate==0.21.0
-torch==2.0.1
+torch==2.0.1  # ✅ Move this before xformers so it's installed first
+xformers==0.0.22  # ✅ Install AFTER torch
 peft==0.4.0  # For LoRA
-xformers==0.0.22  # ✅ Added Xformers
