--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ langchain==0.3.19
 python-dotenv==1.0.0
 alembic==1.11.1
 passlib==1.7.4
+PyJWT==2.8.0
 
 # Hugging Face & LoRA
 transformers==4.31.0
