--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ python-dotenv==1.0.0
 alembic==1.11.1
 passlib==1.7.4
 PyJWT==2.8.0
+email-validator==1.3.1
 
 # Hugging Face & LoRA
 transformers==4.31.0
