--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,10 @@ python-dotenv==1.0.0
 alembic==1.11.1
 passlib==1.7.4
 PyJWT==2.8.0
-email-validator==1.3.1
+email-validator>=2.0.0
 
 # Hugging Face & LoRA
 transformers==4.31.0
 accelerate==0.21.0
 xformers==0.0.22  # ✅ Install AFTER torch
 peft==0.4.0  # For LoRA
-
