--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ alembic==1.11.1
 passlib==1.7.4
 PyJWT==2.8.0
 email-validator>=2.0.0
+python-multipart==0.0.5
 
 # Hugging Face & LoRA
 transformers==4.31.0
